<resources>
    <string name="app_name">Research AI</string>
    <string name="register">Register</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="passowrd_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_btn_name">Register</string>
    <string name="login_name">LOGIN</string>
    <string name="email_hints">Email</string>
    <string name="password_hints">Password</string>
    <string name="login_btn">Login</string>
    <string name="create_account_sign_up">Create Account, Sign Up</string>
    <string name="already_signed_up_login">Already Signed up, Login</string>
    <string name="research_ai">Research AI</string>
    <string name="username_profile">UserName</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="classification">Classification</string>
    <string name="image_classification">image_classification</string>
    <string name="object_detection">Object Detection</string>
    <string name="about">About</string>
    <string name="username">Username</string>
    <string name="email">test@gmail.com</string>
    <string name="tell_your_friend">Tell Your Friend</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="classification_tab">Arabiensis Classification</string>
    <string name="anopheles_arabiensis">anopheles_arabiensis</string>
    <string name="anopheles_arabiensis_name">Anopheles Arabiensis</string>
    <string name="anopheles_gambiae">Anopheles gambiae</string>
    <string name="anopheles_gambiae_name">Anopheles gambiae</string>
    <string name="classification_page">classification_page</string>
    <string name="about_classification">About Classification</string>
    <string name="object_detection_view">Object Detection</string>
    <string name="objectdetectioninfo">objectDetectionInfo</string>
    <string name="about_object_detection">About Object Detection</string>
    <string name="capture_image">Capture Image</string>
    <string name="load_from_gallery">Load from Gallery</string>
    <string name="prediction_result">Prediction Result:</string>
    <string name="predict">Predict</string>
    <string name="arabiensis_object_detection">Arabiensis Object Detection</string>
    <string name="realtime_detection">Realtime Detection</string>
    <string name="realtime_arabiensis_detection">RealTime Arabiensis Detection</string>
    <string name="male">Male</string>
    <string name="gambie_classification">Gambie Classification</string>
    <string name="real_time_gambie_detection">Real Time Gambie Detection</string>
    <string name="gambie_object_detection">Gambie Object Detection</string>
</resources>