<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassificationActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/classification_tab"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold"/>


        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:padding="4dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/arabiensisCardTv"
            android:layout_width="250dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/classification"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/anopheles_arabiensis" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anopheles_arabiensis_name"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="8dp"/>



            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:id="@+id/gambieCard"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/object_detection"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/anopheles_gambiae" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anopheles_gambiae_name"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="8dp"/>



            </RelativeLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:id="@+id/moreInfoCard"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/info"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/classification_page" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_classification"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="8dp"/>


            </RelativeLayout>



        </androidx.cardview.widget.CardView>

    </LinearLayout>





</RelativeLayout>