<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GambieObjectDEActivity"
    tools:ignore="MissingClass">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        tools:ignore="MissingConstraints">


        <RelativeLayout
            android:id="@+id/anophelesArabiansisTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="4dp">

            <TextView
                android:layout_width="353dp"
                android:layout_height="69dp"
                android:text="@string/gambie_object_detection"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="-6dp" />


        </RelativeLayout>



    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_below="@+id/toolbar"
        android:id="@+id/imageViewTv"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:src="@drawable/placeholder_image"
        android:textSize="18sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_margin="8dp"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewTv"
        android:layout_centerHorizontal="true"
        android:text="@string/capture_image"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnLoadFromGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCapture"
        android:layout_centerHorizontal="true"
        android:text="@string/load_from_gallery"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnRealTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLoadFromGallery"
        android:layout_centerHorizontal="true"
        android:text="@string/realtime_detection"
        android:layout_margin="8dp"/>
</RelativeLayout>