<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".GambieActivity">>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        tools:ignore="MissingConstraints">


        <RelativeLayout
            android:id="@+id/anophelesArabiansisTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="4dp">

            <TextView
                android:layout_width="353dp"
                android:layout_height="69dp"
                android:text="@string/gambie_classification"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="-6dp" />


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <!-- ImageView to display the image -->

    <!-- Button to capture an image -->

    <!-- Button to load an image from the gallery -->
    <ImageView
        android:id="@+id/imageViewTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        android:src="@drawable/placeholder_image"
        app:layout_constraintBottom_toTopOf="@+id/btnCapture"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="NotSibling"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btnCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewTv"
        android:layout_centerHorizontal="true"
        android:text="@string/capture_image"
        app:layout_constraintBottom_toTopOf="@+id/btnLoadFromGallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <!-- Button to trigger the prediction -->
    <Button
        android:id="@+id/btnLoadFromGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCapture"
        android:layout_centerHorizontal="true"
        android:text="@string/load_from_gallery"
        app:layout_constraintBottom_toTopOf="@+id/btnPredict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <!-- TextView to show the prediction result -->
    <Button
        android:id="@+id/btnPredict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLoadFromGallery"
        android:layout_centerHorizontal="true"
        android:text="@string/predict"
        app:layout_constraintBottom_toTopOf="@+id/tvPredictionResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvPredictionResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnPredict"
        android:layout_centerHorizontal="true"
        android:text="@string/prediction_result"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
