<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#271337"
    tools:context=".profileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/profile_bg">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile"
            app:civ_border_color="#000"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageEditBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="19dp"
            android:background="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="241dp"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/username"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage"
            app:layout_constraintVertical_bias="0.017" />

        <TextView
            android:id="@+id/emailTv"
            android:layout_width="178dp"
            android:layout_height="26dp"
            android:text="@string/email"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTv"
            android:textAlignment="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_below="@+id/const_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tell_your_friend"
            android:id="@+id/shareTv"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#FFF"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="#C8BCBC"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:id="@+id/logoutTv"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#FFF"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="#C8BCBC"/>

    </LinearLayout>

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="22sp"
        android:layout_marginTop="22sp"
        android:layout_marginEnd="22sp"
        android:layout_marginBottom="22sp"
        android:background="@drawable/btn"
        android:minWidth="150dp"
        android:text="@string/update"
        android:visibility="gone"
        android:textColor="#fff" />

</RelativeLayout>